# EnergyIntel

./: .gitignore  README.md  docker-compose.local.yaml
dashboards/: .env  .env.example  db.py  main.py  pyproject.toml
dashboards/pages/: cen.py  overview.py  sea.py
fuentes/base/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fuentes/base/db/: init.sql
fuentes/base/docs/: ARCHITECTURE.md  EXAMPLES.md  EXTRACTORS.md  PARSERS.md
fuentes/base/docs/development/: FIRST_RUN.md
fuentes/base/examples/file_processing/: .env.example  README.md
fuentes/base/examples/rest_api/: .env.example  README.md
fuentes/base/examples/web_scraping/: .env.example  README.md  dynamic_example.md
fuentes/base/src/: client.py  database.py  main.py  settings.py
fuentes/base/src/core/: database.py  http_client.py  logging.py
fuentes/base/src/extractors/: api_rest.py  base.py  file_download.py  web_dynamic.py  web_static.py
fuentes/base/src/parsers/: base.py  csv_parser.py  html_parser.py  json_parser.py  pdf_parser.py  xlsx_parser.py
fuentes/base/src/repositories/: base.py  raw_data.py
fuentes/cen-acceso-abierto/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Notas.md  README.md  cleanup_sasc_to_sac.sql  deploy.sh  docker-compose.yml  pipeline.py  pyproject.toml
fuentes/cen-acceso-abierto/db/: init.sql  migrate.py  schema_formularios_parsed.sql  schema_solicitudes.sql  setup.py
fuentes/cen-acceso-abierto/db/migrations/: 001_add_download_error_column.sql  002_add_documentos_ultimas_versiones_view.sql  003_add_pdf_metadata_columns.sql  004_expand_varchar_columns.sql  005_add_zip_formato.sql  006_add_updated_at_columns.sql  007_add_pipeline_runs_and_smart_upsert.sql  008_align_tracking_with_sea.sql  008_simplify_metadata_columns.sql  009_create_solicitudes_history.sql  009_recreate_views_after_column_rename.sql
fuentes/cen-acceso-abierto/docs/: API_DOCUMENTATION.md  ARCHITECTURE_ANALYSIS.md  DATABASE_MIGRATIONS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FORMS_IMPLEMENTATION_PLAN.md  PARSING_ERROR_HANDLING.md  PDF_PARSING_ANALYSIS.md  PDF_SCHEMA_DESIGN.md  PIPELINE_UPSERT.md  VISTAS_DOCUMENTOS.md  db_inventory.md
fuentes/cen-acceso-abierto/forms/: 2504-FORM-FEH-V1-1.xlsx  2504-FORM-SAC-V1.xlsx  2504-FORM-SUCTD-V1.xlsx
fuentes/cen-acceso-abierto/scripts/: TESSERACT_INSTALL.md  demo_pdf_parsers.py  diagnostic_illimani.py  diagnostico_links.sql  reparse_failed.py
fuentes/cen-acceso-abierto/src/: batch_download_fehaciente.py  batch_download_sac.py  batch_download_suctd.py  batch_parse_fehaciente.py  batch_parse_sac.py  batch_parse_suctd.py  cen_database.py  cen_extractor.py  clean_all.py  client.py  iterative_parse.py  logging_config.py  main.py  main_cen.py  settings.py
fuentes/cen-acceso-abierto/tests/: test_parser_v2.py  test_regression_parser_v2.py
fuentes/sea/: .env.example  .gitignore  CLAUDE.md  Dockerfile  FRAMEWORK.md  MEJORAS_PARSER.md  README.md  batch_processor.py  docker-compose.yml  error_report.py  observaciones.md  pipeline.py  pyproject.toml  reset_pipeline.py  run_sample.py  stats.py  temp.md  test_mostrar_documento_strategy.py
fuentes/sea/db/: init.sql  migrate.py  setup.py
fuentes/sea/docs/: PIPELINE_UPSERT.md
fuentes/sea/src/: main.py  settings.py
fuentes/sea/src/core/: database.py  (+1 more)
(+59 files in other folders)
