[project]
name = "cen-acceso-abierto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mysql-connector-python>=9.4.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pydantic-settings>=2.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
]
