[project]
name = "cen-acceso-abierto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "mysql-connector-python>=9.4.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pydantic-settings>=2.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
    "tabula-py>=2.10.0",
    "camelot-py>=0.11.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "xlrd",
]
